--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
- <resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Labmuffles" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Labmuffles" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color.
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,4 +14,13 @@
         // Customize your theme here. -->
 
     </style>
+
+    <style name="Theme.Labmuffles.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Labmuffles.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.Labmuffles.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
